--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,3 +23,19 @@
     top: 0;
     width: 0;
 }
+
+.prose .video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.prose .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
